--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -8,8 +8,7 @@ http {
 }
 
 database {
-    url = ""
-    driver = "com.mysql.jdbc.Driver"
-    user = ""
-    password = ""
+    url = "jdbc:mysql://kirill.polushin.org:3306/dist_calc?useUnicode=true&characterEncoding=UTF-8"
+    user = "dist_calc"
+    password = "q9h2txn6"
 }
