--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ dependencies {
     implementation 'com.typesafe.akka:akka-http_2.12:10.1.5'
     implementation 'com.typesafe.akka:akka-stream_2.12:2.5.12'
     implementation 'com.typesafe.akka:akka-http-spray-json_2.12:10.1.5'
+    implementation 'org.flywaydb:flyway-core:5.2.4'
 
     implementation 'mysql:mysql-connector-java:8.0.15'
 
